Fix images blurriness and Update hardcoded urls to be url_for

--- a/website/static/css/main.css
+++ b/website/static/css/main.css
@@ -1,6 +1,6 @@
 html,
 body {
-    min-height: 100vh;
+    min-height: 100dvh;
     overflow: auto;
 }
 body {
@@ -51,3 +51,18 @@ body {
 }
 }
 .bg-mainbody { background-color: #F5F5F5; }
+
+
+@media (max-width: 768px) {
+    #profileimageform {
+        width: 100px !important;
+        height: 100px !important;
+    }
+}
+
+@media (max-width: 576px) {
+    #profileimageform {
+        width: 80px !important;
+        height: 80px !important;
+    }
+}
